--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopify-nextjs",
+  "name": "mindera-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.10",
+    "@heroui/react": "^2.6.14",
+    "@heroui/select": "^2.4.10",
+    "@heroui/system": "^2.4.7",
+    "@heroui/theme": "^2.4.6",
+    "@shopify/storefront-api-client": "^1.0.4",
+    "framer-motion": "^12.4.0",
+    "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "sass": "^1.84.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
