--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "graph-gen": "npx graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@heroui/button": "^2.2.10",
@@ -22,11 +23,17 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@graphql-codegen/cli": "^5.0.4",
+    "@graphql-codegen/typescript": "^4.1.3",
+    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
+    "@graphql-codegen/typescript-operations": "^4.4.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "graphql": "^16.10.0",
+    "graphql-request": "^6.1.0",
     "postcss": "^8",
     "sass": "^1.84.0",
     "tailwindcss": "^3.4.1",
